<resources>
    <string name="app_name">Quiz</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="subject">Quiz results</string>
    <string name="chooser">Choose app, please</string>

    <string name="question1">
        What is the capital of Tajikistan?
    </string>
    <string name="answer11">Berlin</string>
    <string name="answer12">Dushanbe</string>
    <string name="answer13">Tashkent</string>
    <string name="answer14">Bishkek</string>
    <string name="answer15">Astana</string>
    <string name="answer16">Ashgabat</string>
    <string name="answer17">Cabul</string>

    <string name="question2">
        2 + 2 = ?
    </string>
    <string name="answer21">3</string>
    <string name="answer22">1</string>
    <string name="answer23">4</string>
    <string name="answer24">5</string>
    <string name="answer25">8</string>

    <string name="question3">
       What concept is used to indicate that a student is going to in the shortest
        possible time to close all debts for studies at the university before the session?
    </string>
    <string name="answer31">pass</string>
    <string name="answer32">flying</string>
    <string name="answer33">speed run</string>
    <string name="answer34">blitzkrieg</string>
    <string name="answer35">jogging</string>

    <string name="question4">
        What year did java 1.0 appeared?
    </string>
    <string name="answer41">1991</string>
    <string name="answer42">1990</string>
    <string name="answer43">1997</string>
    <string name="answer44">1996</string>
    <string name="answer45">1995</string>
    <string name="answer46">1992</string>

    <string name="question5">
        Which beer is NOT Bavarian (Hell, Weissbier, Kellerbier and Zhigulevskoe)?
    </string>
    <string name="answer51">None of them</string>
    <string name="answer52">Hell</string>
    <string name="answer53">Weissbier</string>
    <string name="answer54">Kellerbier</string>
    <string name="answer55">Zhigulevskoe</string>

    <string name="question6">
        What the best way to access views?
    </string>
    <string name="answer61">ViewBinding</string>
    <string name="answer62">DataBinding</string>
    <string name="answer63">Kotlin Synthetic</string>
    <string name="answer64">Butterknife</string>
    <string name="answer65">findViewById</string>

    <string name="question7">
        In which country was born company "Peugeot"?
    </string>
    <string name="answer71">Germany</string>
    <string name="answer72">France</string>
    <string name="answer73">Japan</string>
    <string name="answer74">Korea</string>
    <string name="answer75">Russia</string>
    <string name="answer76">China</string>

    <string name="question8">
        What modern name of Persia?
    </string>
    <string name="answer81">Iran</string>
    <string name="answer82">Ayran</string>
    <string name="answer83">Iraq</string>
    <string name="answer84">Tajikistan</string>
    <string name="answer85">Afghanistan</string>

    <string name="question9">
        How many pairs chromosomes does a person have?
    </string>
    <string name="answer91">45</string>
    <string name="answer92">46</string>
    <string name="answer93">23</string>
    <string name="answer94">49</string>
    <string name="answer95">47</string>

    <string name="question10">
        What there languages is JVM (Dart, CoffeeScript, Ceylon, Perl, APL)?
    </string>
    <string name="answer101">Dart</string>
    <string name="answer102">CoffeeScript</string>
    <string name="answer103">Ceylon</string>
    <string name="answer104">Perl</string>
    <string name="answer105">APL</string>
</resources>